# learn_python

./: .env.local  .env.test  .gitignore  Dockerfile  FIXME.md  README.md  alembic.ini  docker-compose-local.yml  docker-compose-test.yml  docker-compose-tools.yml  docker-compose.yml  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: static.yml  test.yml
alembic/: env.py
alembic/versions/: 405a38fd4a61_fix_tables.py  712460a1f8bb_change_not_null.py  abcebccc5175_create_tables.py
app/: config.py  database.py  exceptions.py  main.py
app/crud/: author_crud.py
app/models/: __init__.py  author.py  base.py  book.py  constants.py  domain.py
app/repository/: authoerCrud.py  author_crud.py  book_crud.py
app/routers/: auther.py  author.py  author_router.py  book.py  book_router.py
app/schemas/: param.py  response.py
app/service/: author_service.py  book_service.py
app/services/: author_service.py  book_service.py
app/tests/repository/: test_author_crud.py  test_book_crud.py
app/tests/service/: test_author_service.py  test_book_service.py
page/openApi/: index.html  openapi.json
scripts/: check.sh  dock.sh  test.sh  uv.sh
tests/: conftest.py
tests/crud/: test_author_crud.py  test_book_crud.py
tests/repository/: test_author_crud.py  test_book_crud.py
tests/router/: test_author.py  test_book.py
tests/routers/: test_author.py  test_book.py
tests/service/: test_author_service.py  test_book_service.py
tests/services/: test_author_service.py  test_book_service.py
